# vsopy-pkg

./: .gitignore  LICENSE  README.md  batch_images.py  blind_measure_images.py  create_master.py  diff_simple.py  get_chart.py  list_images.py  measure_images.py  photometry.py  pyproject.toml  verify_simple_xfm.py
calibr/: CalibrationMatcher.py  __init__.py
data/: AavsoParser.py  PersistentTable.py  StarData.py  __init__.py
docs/source/: api.rst  conf.py  index.rst  modules.rst  vsopy.data.rst  vsopy.mock.rst  vsopy.phot.rst  vsopy.reduce.rst  vsopy.rst  vsopy.util.rst
phot/: BatchAggregator.py  BatchDataProvider.py  BatchTransformer.py  BulkPhotometry.py  DataProvider.py  SimpleTransform.py  __init__.py  measure.py  transform.py
plot/: plot.py
reduce/: CalibrationMatcher.py  MasterBuilder.py  __init__.py  calibrate.py  solve.py
src/vso/data/: AavsoReport.py  StarData.py
src/vso/mock/: MockImage.py
src/vso/reduce/: solve.py
src/vso/util/: FrameType.py  __init__.py
test/data/: test_AavsoApi.py  test_AavsoParser.py  test_PersistentTable.py  test_StarData.py
test/mock/: test_MockImage.py
test/phot/: test_BatchDataProvider.py  test_measure.py  test_transform.py
test/reduce/: test_CalibrationMatcher.py
test/util/: test_Layout.py  test_SessionImages.py  test_Settings.py  test_format.py
util/: Layout.py  Settings.py  __init__.py  format.py
vso/calibr/: test_CalibrationMatcher.py
vso/data/: AavsoParser.py  CameraRegistry.py  PersistentTable.py  test_AavsoApi.py  test_AavsoParser.py  test_PersistentTable.py  test_StarData.py
vso/mock/: test_MockImage.py
vso/phot/: __init__.py  classic_transform.py  test_measure.py
vso/plot/: __init__.py  plot.py  theme.py
vso/reduce/: CalibrationMatcher.py  calibrate.py  test_CalibrationMatcher.py
vso/util/: Layout.py  SessionImages.py  test_Layout.py  test_Settings.py  types.py
(+30 files in other folders)
