
[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "vsopy"
version = "0.1.0"
description = "A Python package for astrophotometry automation."
authors = [{name ="Dmitry Mukhortov", email = "d.v.mukhortov@gmail.com"}]
maintainers = [{name ="Dmitry Mukhortov", email = "d.v.mukhortov@gmail.com"}]
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICEN[CS]E.*"]
requires-python = ">=3.8"
dependencies = [
  "astropy",
  "astroquery",
  "bottleneck",
  "ccdproc",
  "photutils",
]
keywords = ["astrophotometry", "astropy", "aavso"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python"
]
