
[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "vsopy"
version = "0.1.4"
description = "A Python package for astrophotometry automation."
authors = [{name ="Dmitry Mukhortov", email = "d.v.mukhortov@gmail.com"}]
maintainers = [{name ="Dmitry Mukhortov", email = "d.v.mukhortov@gmail.com"}]
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICEN[CS]E.*"]
requires-python = ">=3.8"
dependencies = [
  "astropy",
  "astroquery",
  "bottleneck",
  "ccdproc",
  "photutils",
  "psutil"
]
keywords = ["astrophotometry", "astropy", "aavso"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python"
]

[project.optional-dependencies]
testing = [
  "mypy",
  "pytest",
  "pytest-cov",
]
docs = [
  "sphinx",
]

[project.scripts]
vso-create-master = "vsopy.scripts.create_master:main"
vso-list-images = "vsopy.scripts.list_images:main"
vso-batch-images = "vsopy.scripts.batch_images:main"
vso-measure-images = "vsopy.scripts.measure_images:main"